# zephyr-devices

boards/arm/nrf52833_herald_base/: Kconfig.defconfig  nrf52833_herald_base.dts  nrf52833_herald_base_defconfig
drivers/: all-custom.cmake
drivers/sensor/tmp1075/: CMakeLists.txt  Kconfig  tmp1075.c  tmp1075.h
samples/tmp1075/: CMakeLists.txt
samples/tmp1075/src/: main.c
samples/wearable-base/: CMakeLists.txt  README.md  prj.conf
samples/wearable-base/src/: main.c
